feat: adicionar busca de usuário  unico.
